--- a/package.json
+++ b/package.json
@@ -6,7 +6,18 @@
   "dependencies": {
     "stats-js": "^1.0.0-alpha1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.7",
+    "html-webpack-plugin": "^2.30.1",
+    "rimraf": "^2.6.2",
+    "style-loader": "^0.18.2",
+    "webpack": "^2.2.0-rc.0",
+    "webpack-dev-server": "^2.2.0-rc.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
