--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "version": "1.0.0",
   "description": "Physics Engine",
   "main": "index.js",
+  "engines": {
+    "node": "8.4.0",
+    "npm": "5.03"
+  },
   "dependencies": {
-    "create-react-app": "^1.4.0",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-redux": "^5.0.6",
-    "react-router": "^4.2.0",
-    "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0",
+    "concurrently": "^3.5.0",
+    "cookie-session": "^1.3.2",
+    "express": "^4.15.5",
+    "mongoose": "^4.11.13",
+    "nodemon": "^1.12.1",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^1.0.0",
     "stats-js": "^1.0.0-alpha1"
   },
   "devDependencies": {
@@ -26,8 +30,11 @@
     "webpack-dev-server": "^2.2.0-rc.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "start": "node index.js",
+    "build": "webpack",
+    "server": "nodemon index.js",
+    "client": "npm run start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
