--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "mocha",
     "eject": "react-scripts eject"
-  }
+  },
+  "devDependencies": {}
 }
