--- a/client/package.json
+++ b/client/package.json
@@ -30,5 +30,8 @@
     "test": "mocha",
     "eject": "react-scripts eject"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "enzyme-adapter-react-15": "^1.1.0",
+    "react-test-renderer": "^15.6.2"
+  }
 }
