--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "node": "8.4.0",
     "npm": "5.03"
   },
+  "jest": {
+    "setupTestFrameworkScriptFile": "./client/src/test-setup.js"
+  },
   "dependencies": {
     "concurrently": "^3.5.0",
     "cookie-session": "^1.3.2",
@@ -24,7 +27,9 @@
     "babel-preset-react": "^6.24.1",
     "chai": "^4.1.2",
     "css-loader": "^0.28.7",
+    "enzyme": "^3.5.0",
     "html-webpack-plugin": "^2.30.1",
+    "jest": "^23.5.0",
     "mocha": "^5.0.5",
     "rimraf": "^2.6.2",
     "sinon": "^4.5.0",
@@ -38,7 +43,8 @@
     "server": "nodemon index.js",
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "test": "mocha --compilers js:babel-core/register ./test/**/*.js"
+    "test": "mocha --compilers js:babel-core/register ./test/**/*.js",
+    "test2": "jest"
   },
   "repository": {
     "type": "git",
