--- a/client/package.json
+++ b/client/package.json
@@ -12,17 +12,18 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
-    "react": "^15.6.1",
+    "enzyme-adapter-react-15": "^1.3.0",
+    "react": "^16.7.0",
     "react-dat-gui": "^1.0.2",
-    "react-dom": "^15.6.1",
-    "react-redux": "^5.0.6",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
+    "react-dom": "^16.7.0",
+    "react-redux": "^6.0.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.0.13",
-    "redux": "^3.7.2",
+    "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
-    "redux-promise-middleware": "^4.4.1",
-    "redux-thunk": "^2.2.0"
+    "redux-promise-middleware": "^4.4.2",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
