--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "enzyme-adapter-react-15": "^1.3.0",
+    "node-sass-chokidar": "^1.3.4",
     "react": "^16.7.0",
     "react-dat-gui": "^1.0.2",
     "react-dom": "^16.7.0",
@@ -26,6 +27,8 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
+    "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive --use-polling --polling-interval 1000",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "mocha",
