--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "concurrently": "^3.5.0",
     "cookie-session": "^1.3.2",
     "express": "^4.15.5",
+    "kleur": "^3.0.2",
     "mongoose": "^4.11.13",
     "nodemon": "^1.12.1",
     "passport": "^0.4.0",
@@ -21,6 +22,7 @@
     "stats-js": "^1.0.0-alpha1"
   },
   "devDependencies": {
+    "acorn": "^6.1.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
@@ -28,6 +30,11 @@
     "chai": "^4.1.2",
     "css-loader": "^0.28.7",
     "enzyme": "^3.5.0",
+    "eslint": "^5.15.2",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^23.5.0",
     "mocha": "^5.0.5",
