--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -1,6 +1,13 @@
 {
-    "extends": "react-app",
+    "extends": [
+        "react-app",
+        "prettier"
+    ],
     "rules": {
+        "prettier/prettier": "error",
         "no-console": "error"
-    }
+    },
+    "plugins": [
+        "prettier"
+    ]
 }
