--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "enzyme-adapter-react-15": "^1.1.0",
+    "eslint-config-react-app": "^3.0.8",
     "react-test-renderer": "^15.6.2"
   }
 }
