--- a/package.json
+++ b/package.json
@@ -10,6 +10,17 @@
   "jest": {
     "setupTestFrameworkScriptFile": "./client/src/test-setup.js"
   },
+  "lint-staged": {
+    "*.{js,jsx,json,css}": [
+      "prettier --write",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "dependencies": {
     "concurrently": "^3.5.0",
     "cookie-session": "^1.3.2",
@@ -24,6 +35,7 @@
   "devDependencies": {
     "acorn": "^6.1.1",
     "babel-core": "^6.26.0",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
@@ -32,12 +44,19 @@
     "enzyme": "^3.5.0",
     "eslint": "^5.15.2",
     "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.2.0",
+    "eslint-config-react-app": "^3.0.8",
+    "eslint-plugin-flowtype": "^2.50.3",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.12.4",
     "html-webpack-plugin": "^2.30.1",
+    "husky": "^2.2.0",
     "jest": "^23.5.0",
+    "lint-staged": "^8.1.6",
     "mocha": "^5.0.5",
+    "prettier": "^1.17.0",
     "rimraf": "^2.6.2",
     "sinon": "^4.5.0",
     "style-loader": "^0.18.2",
@@ -51,7 +70,8 @@
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "test": "mocha --compilers js:babel-core/register ./test/**/*.js",
-    "test2": "jest"
+    "test2": "jest",
+    "lint": "eslint ./"
   },
   "repository": {
     "type": "git",
