--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,7 @@
     }
   },
   "dependencies": {
-    "axios": "^0.18.1",
+    "axios": ">=0.18.1",
     "enzyme-adapter-react-15": "^1.3.0",
     "node-sass-chokidar": "^1.3.4",
     "react": "^16.7.0",
