Partially added ability to display scenes from db

--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,12 @@
     },
     "/api/*": {
       "target": "http://localhost:5000"
+    },
+    "/allscenes/": {
+      "target": "http://localhost:5000"
+    },
+    "/scenes/*": {
+      "target": "http://localhost:5000"
     }
   },
   "dependencies": {
