--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "axios": ">=0.18.1",
     "enzyme-adapter-react-15": "^1.3.0",
     "node-sass-chokidar": "^1.3.4",
+    "prettier": "^1.19.1",
     "react": "^16.7.0",
     "react-dat-gui": "^1.0.2",
     "react-dom": "^16.7.0",
