--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
     "prettier": "^1.19.1",
+    "react-hook-form": "^6.13.0",
     "stats-js": "^1.0.0-alpha1"
   },
   "devDependencies": {
