--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "cookie-session": "^1.3.2",
     "express": "^4.15.5",
     "kleur": "^3.0.2",
+    "mongodb": "^3.6.3",
     "mongoose": "^4.11.13",
     "nodemon": "^1.12.1",
     "passport": "^0.4.0",
-    "passport-google-oauth20": "^1.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "prettier": "^1.19.1",
     "react-hook-form": "^6.13.0",
     "stats-js": "^1.0.0-alpha1"
