--- a/client/package.json
+++ b/client/package.json
@@ -18,11 +18,12 @@
   },
   "dependencies": {
     "axios": ">=0.18.1",
+    "dat-gui": "^0.5.0",
     "enzyme-adapter-react-15": "^1.3.0",
     "node-sass-chokidar": "^1.3.4",
     "prettier": "^1.19.1",
     "react": "^16.7.0",
-    "react-dat-gui": "^1.0.2",
+    "react-dat-gui": "^4.0.3",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
