--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     }
   },
   "dependencies": {
+    "bluebird": "^3.7.2",
     "concurrently": "^3.5.0",
     "cookie-session": "^1.3.2",
     "express": "^4.15.5",
     "kleur": "^3.0.2",
     "mongodb": "^3.6.3",
-    "mongoose": "^4.11.13",
+    "mongoose": "^5.11.13",
     "nodemon": "^1.12.1",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^2.0.0",
