--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -5,7 +5,7 @@
     ],
     "rules": {
         "prettier/prettier": "error",
-        "no-console": "error"
+        "no-console": "warn"
     },
     "plugins": [
         "prettier"
