--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,6 @@
     "dat-gui": "^0.5.0",
     "enzyme-adapter-react-15": "^1.3.0",
     "node-sass-chokidar": "^1.3.4",
-    "prettier": "^1.19.1",
     "react": "^16.7.0",
     "react-dat-gui": "^4.0.3",
     "react-dom": "^16.7.0",
@@ -45,7 +44,10 @@
   },
   "devDependencies": {
     "enzyme-adapter-react-15": "^1.1.0",
+    "eslint-config-prettier": "^7.2.0",
     "eslint-config-react-app": "^3.0.8",
+    "eslint-plugin-prettier": "^3.3.1",
+    "prettier": "^1.19.1",
     "react-test-renderer": "^15.6.2"
   }
 }
