--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "passport-google-oauth20": "^2.0.0",
     "prettier": "^1.19.1",
     "react-hook-form": "^6.13.0",
+    "react-router-dom": "^5.2.0",
     "stats-js": "^1.0.0-alpha1"
   },
   "devDependencies": {
